<resources>
    <string name="app_name">Esibank</string>
    <string name="list_client">Lister clients</string>
    <string name="add_client_button">Ajouter client</string>
    <string name="nom">Nom</string>
    <string name="mail">Email</string>
    <string name="deleteButton">Supprimer</string>
    <string name="editButton">Modifier</string>
    <string name="addButton">Ajouter</string>
    <string name="etatConnexion">Etat connexion</string>
    <string name="demoText">Prototype</string>
    <string name="esi">ESI</string>
    <string name="bank">BANK</string>
    <string name="about_us">A propos</string>
    <string name="info_project">Projet de synthèse 2017-2018 - EsiBank</string>
    <string name="local_service_stopped">tell user we stopped</string>
    <string name="local_service_started">Service started !</string>
    <string name="local_service_label">local_service_label</string>
    <string name="stop_service">Déconnexion</string>
    <string name="start_service">Démarrer service</string>
    <string name="fiels_user">Numéro de client : </string>
    <string name="connexion">Se connecter</string>
    <string name="welcomeLabel">Bienvenue</string>

    <string-array name="users_list">
        <item>Anonyme</item>
        <item>Gilles Giraud</item>
        <item>Alexandre Brenner</item>
        <item>Olivier Michel</item>
    </string-array>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="message">Message</string>
    <string name="titre">Titre</string>

</resources>
