<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.esipe.esibankm.esibankm.HomeActivity"
    android:orientation="vertical"
    android:weightSum="1">

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />


    <!--<ImageView-->
        <!--android:id="@+id/imageView1"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:src="@mipmap/logo_esibank"-->
        <!--android:layout_gravity="center"/>-->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="120dp"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/textView"
            android:layout_width="84dp"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:text="@string/esi"
            android:textColor="#d1c693"
            android:textSize="50dp"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="25dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:text="@string/bank"
            android:textColor="#00a0df"
            android:textSize="50dp"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="25dp" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/name_connected">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/fiels_user"
            android:gravity="center"/>
        <Spinner
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:id="@+id/users_spinner"
            tools:listitem="@layout/support_simple_spinner_dropdown_item"
           />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/connected_label">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="Vous êtes connecté en tant que "
            android:gravity="center"
            android:textSize="20dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="20dp"
            android:id="@+id/login_connected"/>
    </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            android:id="@+id/connect_button">

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#00a0df"
                android:onClick="onConnectionButtonClick"
                android:text="@string/connexion"
            />

        </LinearLayout>

    <Button
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#d1b993"
    android:onClick="onStopButtonClick"
    android:text="@string/stop_service" />

        <!--<Button-->
            <!--android:onClick="onListButtonClick"-->
            <!--android:text="@string/list_client"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:background="#57889c"-->
            <!--android:layout_weight="0.07" />-->

</LinearLayout>
</ScrollView>
