<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/aboutus_action"
        android:icon="@android:drawable/ic_dialog_info"
        android:title="Ajouter"
        app:showAsAction="ifRoom" />
</menu>